minor vocabulary corrections

--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -15,6 +15,18 @@ OpenMP
 	
 % Parallel Evolutionary Algorithms
 
+@ARTICLE{Huang:openmpGlobalArrays2005,
+    author =  "L. Huang and B. Chapman and Z. Liu",
+    title = "Towards a more efficient implementation of OpenMP for clusters via translation to global arrays"
+    journal = "Parallel Computing"
+    VOLUME = {31},
+    NUMBER = {},
+    PAGES = {1114-1139},
+    PUBLISHER = {Elsevier},
+    YEAR = {2005}
+}
+
+
 @ARTICLE{paradiseo:JHeuristics2004,
 	AUTHOR = "S. Cahon and N. Melab and E.-G. Talbi",
 	TITLE = "{ParadisEO: A Framework for the Reusable Design of Parallel and Distributed Metaheuristics}",
@@ -152,8 +164,6 @@ OpenMP
   booktitle={AIPS-2000},
   pages={70-82},
   year=2000
-}
-
 }
 
 @Article{	  ff:jair01,
