--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -105,11 +105,12 @@
 Multicore machines are becoming a standard way to speed up the system performance.
 After having instantiated the evolutionary metaheuristic \DAEX\ with the forward search \YAHSP\ planner, 
 we investigate on the global parallelism approach, which exploits the inherent parallelism of the individual evaluation.
-This paper describes a parallel shared-memory release of the \DAEYAHSP\ planning system using the OpenMP directive-based API.
+This paper describes a parallel shared-memory version of the \DAEYAHSP\ planning system using the OpenMP directive-based API.
 The parallelization scheme applies at a high level abstraction and thus can be used by any evolutionary algorithm implemented with the Evolving Objects framework.
-The proof of concept is made on a 48-core machine with two planning tasks extracted from the last international planning competition.
+The proof of concept is validated on a 48-core machine with two planning tasks extracted from the last international planning competition.
 Experiments show significant speedups along the number of cores and along the size of the population.
-This preliminary work opens an avenue for parallelizing any evolutionary algorithm developed with EO.
+This preliminary work opens an avenue for parallelizing any evolutionary
+algorithm developed with EO that would target multi-core architectures.
 \end{abstract}
 
 \category{I.2.8}{Computing Methodologies}{Artificial Intelligence }{Problem Solving, Control Methods, and Search}
@@ -137,7 +138,8 @@ objects, and  actions are triples of  sets of atoms:  preconditions, add effects
 del effects.  Instances of the planning problem, called planing tasks, can model
 many kinds of abstract reasoning problems and are known to be PSPACE-hard.
 
-To solve such planning tasks, several heuristic search algorithms have been proposed in the past but none of them are easily parallelizable.
+To solve such planning tasks, several heuristic search algorithms have been
+proposed in the past but none of them can be easily parallelized.
 They require a great amount of technical work to provide efficiency while preserving correctness \cite{burns:JAIR2010,burns:ijcai2009}.
 
 Recently the \DAEX\ evolutionary metaheuristic has been proposed to solve such planning tasks \cite{dae:icaps2010,dae:evocop2006}.
@@ -148,11 +150,15 @@ Moreover, the implementation of \DAEX\ has been made with the STL-based Evolving
 Objects framework\footnote{\url{http://eodev.sf.net}} which provides an abstract
 control structure to develop any kind of evolutionary algorithm. Therefore our
 parallelization scheme is easily transposable to any evolutionary algorithm
-developed with the EO framework.
+developed within the EO framework.
 
-% Il manque un argument pour dire que les archis parallel shared-memory sont bien adaptées à notre cas au contraire des GPGPU (on a pas choisi une archi multi-core au hasard !)
-For the proof of concept we implemented a multi-threaded version of \DAEYAHSP, the instantiation of \DAEX\ with the heuristic forward search \YAHSP\ planner \cite{yahsp:icaps2004}, using the OpenMP directive-based API\footnote{\url{http://www.openmp.org}}. 
-The design of experiment is built on problems extracted from the last international planning competition\footnote{\url{http://ipc.icaps-conference.org}} with the multithreaded \DAEYAHSP\ release mapped onto a 48-core parallel machine.
+As a proof of concept we implemented a multi-threaded version of \DAEYAHSP, the
+instantiation of \DAEX\ with the heuristic forward search \YAHSP\ planner
+\cite{yahsp:icaps2004}, using the OpenMP directive-based
+API\footnote{\url{http://www.openmp.org}}.  The design of experiment is built on
+problems extracted from the last international planning
+competition\footnote{\url{http://ipc.icaps-conference.org}} with the
+multi-threaded \DAEYAHSP\ release mapped onto a 48-core parallel machine.
 
 While clusters is the most common distributed memory system for high performance
 computing, multi-core architecture are gaining popularity as they become the
@@ -168,9 +174,8 @@ API\footnote{\url{http://www.openmp.org}}.
 The design of experiment is built on
 problems extracted from the last international planning
 competition\footnote{\url{http://ipc.icaps-conference.org}} with the
-multithreaded \DAEX\ release mapped onto a 48-core parallel machine.
+multi-threaded \DAEX\ release mapped onto a 48-core parallel machine.
 
-% plan de l'article
 The paper is  outlined as follows. We first describe some  previous works in the
 fields of  parallel evolutionary computation and AI  planning, before presenting
 with more details the main algorithms on which our parallel system is based: the
