--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -199,9 +199,9 @@ where the evaluation is decentralized  but not the other operators, cellular EAs
 approach using a multi-population {\it island parallelism}.
 
 The runs parallelism being trivially achieved by running several runs, the first
-step when parallelizing a new algorithm is often to try the global
-parallelization approach, because the evaluation step is often the most costly
-part of EAs and because evaluation are generally intrinsequely independant \cite{alba:IEEE2002}.
+step  when  parallelizing  a  new  algorithm  is  often  to   try   the   global
+parallelization approach, because the evaluation step is often the  most  costly
+part of EAs and because evaluation are generally intrinsically independent \cite{alba:IEEE2002}.
 
 
 
