--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -249,29 +249,32 @@ search by several orders of magnitude.
 \subsection{Algorithms}
 
 \paragraph{Divide and Evolve} % (PS)
-\DAEX, the concrete implementation of the \dae\ paradigm, is a
+
+\DAEX,   the   concrete   implementation   of   the   \dae\   paradigm,   is   a
 domain-independent satisficing planning system based on Evolutionary Computation
-\cite{dae:evocop2006}. The basic principle is to carry out a {\em
+\cite{dae:evocop2006}.   The  basic  principle  is   to   carry   out   a   {\em
 Divide-and-Conquer} strategy driven by an evolutionary algorithm. The algorithm
 is detailed in \cite{dae:icaps2010} and compared with state-of-the-art planners.
 In order to solve a planning task ${\cal P}_D(I,G)$, the basic idea of \DAEX\ is
-to find a sequence of states $S_1, \ldots, S_n$, and to rely on an embedded
-planner $X$ to solve the series of planning tasks ${\cal P}_D(S_{k},S_{k+1})$,
-for $k \in [0,n]$ (with $S_0 = I$ and $S_{n+1} = G$).  A \DAEX\ individual is a
-sequence of goals which define a sequence of subproblems to be solved. These
-subproblems are submitted successively to an embedded planner $X$ and the global
-solution is obtained after the compression of these intermediate solutions. The
-overall optimization process is controlled by an evolutionary algorithm.
+to find a sequence of states $S_1, \ldots, S_n$, and  to  rely  on  an  embedded
+planner $X$ to solve the series of planning tasks  ${\cal  P}_D(S_{k},S_{k+1})$,
+for $k \in [0,n]$ (with $S_0 = I$ and $S_{n+1} = G$).  A \DAEX\ individual is  a
+sequence of goals which define a sequence of subproblems to be  solved  (a  {\it
+decomposition}).  These subproblems are submitted successively  to  an  embedded
+planner $X$ and the global solution is obtained after the compression  of  these
+intermediate solutions.  The  overall  optimization  process  is  controlled  by
+an  evolutionary  algorithm.
 
 The fitness implements a gradient towards feasibility for unfeasible individuals
-and a gradient towards optimality for feasible individuals. Feasible individuals are always preferred to unfeasible ones.
-Population initialization as well as variation operators are driven by the critical path
-$h^1$ heuristic \cite{h1:aips2000} in order to discard inconsistent state
-orderings, and atom mutual exclusivity inference in order to discard
-inconsistent states. Beside a standard one-point crossover for variable length
-representations, four mutations have been defined: addition (resp. removal) of a
-goal in a sequence, addition (resp. removal) of an atom in a goal. The
-selection is a comparison-based deterministic tournament of size 5.
+and a gradient towards optimality for feasible individuals. Feasible individuals
+are always preferred to unfeasible ones.  Population initialization as  well  as
+variation  operators  are  driven  by  the   critical   path   $h^1$   heuristic
+\cite{h1:aips2000} in order to discard inconsistent state  orderings,  and  atom
+mutual exclusivity inference in order to discard inconsistent states.  Beside  a
+standard one-point crossover for variable length representations, four mutations
+have been defined: addition (resp.  removal) of a goal in a  sequence,  addition
+(resp.  removal) of an atom in a goal.   The  selection  is  a  comparison-based
+deterministic   tournament   of   size   5.
 
 % Parameter tuning
 For the sequential release, Darwinian-related parameters of \DAEX\ have been
