--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -296,8 +296,9 @@ ratio of feasible individuals is over a given threshold or a maximum boundary ha
 been reached. By default this number is doubled at each iteration until at least
 one feasible individual is produced or 100000 has been reached.
 
-Furthermore we add the capability to perform restarts within a time contract in
-order to increase solution quality.
+% inutilise en l'etat
+%Furthermore we add the capability to perform restarts within a time contract in
+%order to increase solution quality.
 
 \paragraph{Yet Another Heuristic Search Planner} % (VV)
 
