--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -377,7 +377,7 @@ order to avoid some typical problems that can happen with shared-memory parallel
 implementations. Indeed, even if individual evaluations are made
 independently of each other, some concurrent accesses to shared memory are still
 required  (for  example, a  basic  one  is  incrementing some  global  counter),
-especially in YAHSP (detailed below). Furthermore, the implementations of \DAEX\
+especially in YAHSP (detailed below). Furthermore, the original implementations of \DAEX\
 and  YAHSP where  not  designed with  parallelism  in mind,  which implied  some
 modifications to render them thread-safe.
 
@@ -417,7 +417,7 @@ Passing Interface (MPI\footnote{on the MPICH2 implementation:
 \url{http://www.mcs.anl.gov/research/projects/mpich2/}}) API and proposes
 several parallelization schemes, available by calling wrappers around common
 functions of EO. ParadisEO targets multi-processors machines, especially
-clusters and grids, for running large-scale general purpose EAs.
+clusters and grids, for running large-scale, general purpose EAs.
 
 We have chosen not to use this framework because we were a targeting multicore
 architecture, where message passing is somewhat useless and may introduce an
@@ -431,14 +431,12 @@ to parallelize an existing program\cite{special:parallelComputing2005}. It may
 also be used as a simple approach to program clusters, either with specialized
 methods or virtual SMP machines\cite{Huang:openmpGlobalArrays2005}.
 
-% parler de la genericite de la technique de parallelisation, n'importe qui peut utiliser EO pour avoir du code parallel independament de DaE/Yahsp.
-
-In order to parallelize a large scope of the framework EO, an analyze was done
-to identify the most used resources by almost all structures. Most of the EO
+In order to parallelize a large scope of the framework EO, an analysis was done
+to identify the most used resources. Most of the EO
 classes use the ``Functor''\footnote{Also called function object} pattern. The
 advantages of this design is to get the genericity and the benefits given by
 classes while keeping the simplicity of a single call to a function. EO Functors
-generally take a population as argument.
+generally take a population (a vector of decompositions) as argument.
 
 Considering that the evaluation of the population is the most costly part of the
 algorithm, this step is our first target to parallelize. Moreover, in most cases
