--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -17,8 +17,8 @@ OpenMP
 
 @ARTICLE{Huang:openmpGlobalArrays2005,
     author =  "L. Huang and B. Chapman and Z. Liu",
-    title = "Towards a more efficient implementation of OpenMP for clusters via translation to global arrays"
-    journal = "Parallel Computing"
+    title = "Towards a more efficient implementation of OpenMP for clusters via translation to global arrays",
+    journal = "Parallel Computing",
     VOLUME = {31},
     NUMBER = {},
     PAGES = {1114-1139},
@@ -182,7 +182,7 @@ OpenMP
                Search}},
   booktitle = {$23^{rd}$ Australasian Conference on Artificial Intelligence (ACAI-2010)},
   year      = {2010},
-  pages     = {415-424},
+  pages     = {415-424}
 }
 
 @Article{	  ipc4:jair05,
@@ -207,11 +207,11 @@ OpenMP
 @article{ PRA-star,
   author    = {M. P. Evett and J. A. Hendler and A. Mahanti and D. S. Nau},
   title     = "{{PRA*}: {M}assively Parallel Heuristic Search}",
-  journal   = {Journal of Parallel and Distributed Computating},
+  journal   = {Journal of Parallel and Distributed Computing},
   volume    = {25},
   number    = {2},
   year      = {1995},
-  pages     = {133-143},
+  pages     = {133-143}
 }
 
 @inproceedings{TDS,
@@ -219,7 +219,7 @@ OpenMP
   title     = "{Transposition Table Driven Work Scheduling in Distributed Search}",
   booktitle = {$16^{th}$ National Conference on Artificial Intelligence (AAAI-1999) },
   year      = {1999},
-  pages     = {725-731},
+  pages     = {725-731}
 }
 
 @inproceedings{PFADDD,
@@ -227,7 +227,7 @@ OpenMP
   title     = "{Sequential and Parallel Algorithms for Frontier {A}* with
                Delayed Duplicate Detection}",
   booktitle = {$21^{st}$ National Conference on Artificial Intelligence (AAAI-2006) },
-  year      = {2006},
+  year      = {2006}
 }
 
 @inproceedings{ HDA-star,
