--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -191,7 +191,10 @@ approach using a multi-population {\it island parallelism}.
 The runs parallelism being trivially achieved by running several runs, the first
 step  when  parallelizing  a  new  algorithm  is  often  to   try   the   global
 parallelization approach, because the evaluation step is often the  most  costly
-part of EAs and because evaluation are generally intrinsically independent \cite{alba:IEEE2002}.
+part of EAs and because evaluation are generally intrinsically independent.
+
+Doing a review of existing algorithms being beyond the scope of this paper, we 
+redirect the reader on the review of Alba and Tomassini\cite{alba:IEEE2002}.
 
 
 
@@ -413,7 +416,7 @@ continuous to combinatorial ones.
 
 An extension of EO for parallelization of algorithms, ParadisEO, has been
 proposed by Cahon et al. \cite{paradiseo:JHeuristics2004}. It uses the Message
-Passing Interface (MPI\footnote{on the MPICH2 implementation:
+Passing Interface (MPI\footnote{with MPICH2:
 \url{http://www.mcs.anl.gov/research/projects/mpich2/}}) API and proposes
 several parallelization schemes, available by calling wrappers around common
 functions of EO. ParadisEO targets multi-processors machines, especially
@@ -451,7 +454,7 @@ The function called ``apply'' takes as parameters a population and a function to
 
 %% TODO: refaire algo proprement avec algorithm2e
 
-\vspace{-0.2cm}
+%\vspace{-0.2cm}
 \begin{algorithm}[h!]
 \caption{apply(proc, pop)}
 \vspace{0.2cm}
@@ -465,7 +468,7 @@ void apply< EOT >( eoUF< EOT, void >& proc,
 }
 \end{verbatim}
 \end{algorithm}
-\vspace{-0.2cm}
+%\vspace{-0.2cm}
 
 %% Here is the pseudo code of this function:
 % \begin{algorithmic}
@@ -482,7 +485,7 @@ CREW\footnote{CREW: Concurantial Read Exclusive Write} model.
 
 %% TODO: refaire algo proprement avec algorithm2e
 
-\vspace{-0.2cm}
+%\vspace{-0.2cm}
 \begin{algorithm}[h!]
 \caption{apply(proc, pop) parallelized using OpenMP directives}
 \vspace{0.2cm}
@@ -497,14 +500,14 @@ void apply< EOT >( eoUF< EOT, void >& proc,
 }
 \end{verbatim}
 \end{algorithm}
-\vspace{-0.2cm}
+%\vspace{-0.2cm}
 
-In order to permit OpenMP to build a multithreaded algorithm without side
-effects, the evaluation functor (the ``proc'' in the apply function) must fulfil certain requirement. 
-In EO, the evaluation functors are supposed to be instantiated only once. In a
-sequential mode, the same instance is used to evaluate every individuals in a
-population. In a parallelized mode, one must ensure that the evaluation functor
-have thread-local data structures.
+In order to permit OpenMP to  build  a  multi-threaded  algorithm  without  side
+effects, the evaluation functor  (the  ``proc''  in  the  apply  function)  must
+fulfill certain requirements.  In EO, the evaluation functors are supposed to be
+instantiated only once.  In a sequential mode, the  same  instance  is  used  to
+evaluate every individuals in a population.  In a parallelized  mode,  one  must
+ensure  that  the  evaluation  functor  have   thread-local   data   structures.
 
 When parallelizing the evaluation loop in an evolutionary algorithm, there
 exists a synchronization step at each iteration, this ensure that no race-condition
@@ -529,14 +532,13 @@ memory.
 
 \paragraph{\DAEX-Specific Parallelization Issues} % (JD)
 
-\DAEX\ evaluation step calls the YAHSP solver several times on the same
-decomposition and thus uses several variables to keep the state of the
-evaluation over the searches between intermediate goals (namely $k$, $B$ and
-$U$).  As the evaluation functor is a single instance, it must be guaranteed
-reentrant and not use static variables nor attributes. A way to achieve the
-re-entrancy is to define those variables as attributes of the decomposition
-itself, and not as attributes of the evaluation functor.
-
+\DAEX\ evaluation step  calls  the  YAHSP  solver  several  times  on  the  same
+decomposition and  thus  uses  several  variables  to  keep  the  state  of  the
+evaluation over the searches between intermediate goals (namely $k$, $B$ and $U$
+in the original article).  As the evaluation functor is a  single  instance,  it
+must be guaranteed reentrant and not use static variables nor attributes. A way
+to achieve the re-entrancy is to define those variables  as  attributes  of  the
+decomposition  itself,  and  not  as  attributes  of  the  evaluation   functor.
 
 
 \section{Experimental Study}
