--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -108,7 +108,7 @@ we investigate on the global parallelism approach, which exploits the intrinsic 
 This paper describes a parallel shared-memory version of the \DAEYAHSP\ planning system using the OpenMP directive-based API.
 The parallelization scheme applies at a high level abstraction and thus can be used by any evolutionary algorithm implemented with the Evolving Objects framework.
 The proof of concept is validated on a 48-core machine with two planning tasks extracted from the last international planning competition.
-Experiments show significant speedups along the number of cores and along the size of the population.
+Experiments show significant speedups with increasing number of cores.
 This preliminary work opens an avenue for parallelizing any evolutionary
 algorithm developed with EO that would target multi-core architectures.
 \end{abstract}
